--- a/food_volume_estimation/food_classification/model.ipynb
+++ b/food_volume_estimation/food_classification/model.ipynb
@@ -2,62 +2,115 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted class index: 7\n",
-      "Predicted class name: Rice\n"
+      "Predicted class: Egg\n",
+      "Total calories in predicted class: 201.5\n"
      ]
     }
    ],
    "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torchvision.models as models\n",
-    "from torchvision import transforms\n",
-    "from PIL import Image\n",
     "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.preprocessing import image\n",
+    "\n",
+    "def load_model_and_weights(model_weights_path):\n",
+    "    # Load the base model\n",
+    "    base_model = tf.keras.applications.InceptionResNetV2(weights='imagenet', include_top=False, input_shape=(224, 224, 3))\n",
+    "    \n",
+    "    # Freeze the base model\n",
+    "    base_model.trainable = False\n",
+    "    \n",
+    "    # Add a global average pooling layer\n",
+    "    x = tf.keras.layers.GlobalAveragePooling2D()(base_model.output)\n",
+    "    \n",
+    "    # Add a dense layer with 11 units and softmax activation for classification\n",
+    "    output = tf.keras.layers.Dense(11, activation='softmax')(x)\n",
+    "    \n",
+    "    # Create the model\n",
+    "    model = tf.keras.Model(inputs=base_model.input, outputs=output)\n",
+    "    \n",
+    "    # Load the trained weights\n",
+    "    model.load_weights(model_weights_path)\n",
+    "    \n",
+    "    return model\n",
+    "\n",
+    "def predict_class(model, img_path, class_names):\n",
+    "    # Load and preprocess the image\n",
+    "    img = image.load_img(img_path, target_size=(224, 224))\n",
+    "    img_array = image.img_to_array(img)\n",
+    "    img_array = np.expand_dims(img_array, axis=0)\n",
+    "    img_array /= 255.0  # Rescale pixel values to [0, 1]\n",
+    "    \n",
+    "    # Predict the class\n",
+    "    prediction = model.predict(img_array)\n",
+    "    \n",
+    "    # Get the predicted class label\n",
+    "    predicted_class = np.argmax(prediction)\n",
+    "    \n",
+    "    # Get the class name from the class_names list\n",
+    "    class_name = class_names[predicted_class]\n",
+    "    \n",
+    "    return class_name\n",
+    "\n",
+    "def calculate_calories(predicted_class, total_volume, class_densities, calories_per_100g):\n",
+    "    # Calculate the total weight based on density and total volume\n",
+    "    total_weight = total_volume * class_densities[predicted_class]\n",
+    "    \n",
+    "    # Calculate the calories based on total weight\n",
+    "    calories = (total_weight / 100) * calories_per_100g[predicted_class]\n",
+    "    \n",
+    "    return calories\n",
     "\n",
     "# Define the class names\n",
     "class_names = ['Bread', 'Dairy product', 'Dessert', 'Egg', 'Fried food', 'Meat', 'Noodles/Pasta', 'Rice', 'Seafood', 'Soup', 'Vegetable/Fruit']\n",
     "\n",
-    "# Define the ResNet34 model\n",
-    "model = models.resnet34(pretrained=True)\n",
-    "in_features = model.fc.in_features\n",
-    "model.fc = nn.Linear(in_features, 11)  # Output layer with 11 classes\n",
+    "# Define the densities corresponding to each class name\n",
+    "class_densities = {\n",
+    "    'Bread': 0.75,\n",
+    "    'Dairy product': 0.6,\n",
+    "    'Dessert': 0.8,\n",
+    "    'Egg': 0.65,\n",
+    "    'Fried food': 0.85,\n",
+    "    'Meat': 0.9,\n",
+    "    'Noodles/Pasta': 0.7,\n",
+    "    'Rice': 0.72,\n",
+    "    'Seafood': 0.88,\n",
+    "    'Soup': 0.78,\n",
+    "    'Vegetable/Fruit': 0.5\n",
+    "}\n",
     "\n",
-    "# Load pretrained weights\n",
-    "model.load_state_dict(torch.load('../../models/classification/simple_model_weights.pth', map_location=torch.device('cpu')))\n",
-    "model.eval()\n",
-    "\n",
-    "# Define transformations for input images\n",
-    "transform = transforms.Compose([\n",
-    "    transforms.Resize(256),\n",
-    "    transforms.CenterCrop(224),\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
-    "])\n",
-    "\n",
-    "# Function to predict the class of an input image\n",
-    "def predict_image(image_path, model, transform):\n",
-    "    image = Image.open(image_path)\n",
-    "    image = transform(image).unsqueeze(0)  # Add batch dimension\n",
-    "    with torch.no_grad():\n",
-    "        outputs = model(image)\n",
-    "        _, predicted = torch.max(outputs, 1)\n",
-    "        predicted_class_index = predicted.item()\n",
-    "        predicted_class_name = class_names[predicted_class_index]\n",
-    "    return predicted_class_index, predicted_class_name\n",
+    "# Dictionary mapping class names to calories per 100g\n",
+    "calories_per_100g = {\n",
+    "    'Bread': 265,\n",
+    "    'Dairy product': 150,\n",
+    "    'Dessert': 250,\n",
+    "    'Egg': 155,\n",
+    "    'Fried food': 330,\n",
+    "    'Meat': 250,\n",
+    "    'Noodles/Pasta': 138,\n",
+    "    'Rice': 130,\n",
+    "    'Seafood': 85,\n",
+    "    'Soup': 30,\n",
+    "    'Vegetable/Fruit': 30\n",
+    "}\n",
     "\n",
     "# Example usage\n",
-    "image_path = '../../assets/readme_assets/examples/rice_example.jpg'\n",
-    "predicted_class_index, predicted_class_name = predict_image(image_path, model, transform)\n",
-    "print(f'Predicted class index: {predicted_class_index}')\n",
-    "print(f'Predicted class name: {predicted_class_name}')\n"
+    "model_weights_path = \"../../models/classification/inception_resnet_v2_classifier.h5\"\n",
+    "image_path = \"../../assets/readme_assets/examples/egg_plate.webp\"\n",
+    "total_volume = 200  # in ml\n",
+    "\n",
+    "loaded_model = load_model_and_weights(model_weights_path)\n",
+    "predicted_class = predict_class(loaded_model, image_path, class_names)\n",
+    "total_calories = calculate_calories(predicted_class, total_volume, class_densities, calories_per_100g)\n",
+    "\n",
+    "print(\"Predicted class:\", predicted_class)\n",
+    "print(\"Total calories in predicted class:\", total_calories)\n"
    ]
   },
   {
